--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,7 +22,7 @@
 
 .main {
   min-height: 100vh;
-  margin: 0 10% 20% 18%;
+  margin: 5% 10% 50% 18%;
 }
 
 .top {
@@ -33,17 +33,18 @@
   position: absolute;
   z-index: 2;
   transform: rotate(270deg);
-  top: 42vh;
-  left: -40vh;
-  font-size: 7rem;
+  top: 400px;
+  left: -400px;
+  font-size: 800%;
   font-weight: bold;
 }
 
 .name {
   position:  absolute;
-  bottom: 10vh;
+  bottom: 10%;
   left: 22vw;
   color: white;
+  text-shadow: 1px 2px 10px #777777;
 }
 
 .nameTitle {
@@ -78,4 +79,52 @@
 
 .itemItem {
   padding-bottom: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+  .sectionInfo {
+    display: block;
+  }
+
+  .main {
+    margin: 0 10% 50% 10%;
+  }
+
+  .topLogo {
+    display: none;
+  }
+
+  .name {
+    position:  absolute;
+    bottom: 6vh;
+    left: 10vw;
+    color: white;
+    z-index: 3;
+  }
+
+  .imageUnset {
+    width: 100%;
+    overflow-x: hidden;
+  }
+  
+  .imageUnset > div {
+    position: unset !important;
+  }
+  
+  .imageProfile {
+    object-fit: cover;
+    width: 150vw !important;
+    position: relative !important;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .main {
+    margin: 0 0 50% 0;
+  }
+
+  .nameTitle {
+    font-size: 200%;
+  }
 }
